fixed form reset, picture alignment, colors on sales, and borders.

--- a/style2.css
+++ b/style2.css
@@ -10,7 +10,6 @@ body {
 
 * {
   box-sizing: border-box;
-  /*border: 2px orange;*/
 }
 
 .clearfloat {
@@ -22,16 +21,11 @@ header {
   background-color: rgb(255, 232, 217);
   width: 800px;
   top: 0px;
-  /*left: 0px;
-  right: 0px;*/
   z-index: 1;
 }
 
 .fishphoto1 {
   float: left;
-  /*width: 50px;
-  height: 50px;*/
-
 }
 
 h1 {
@@ -65,7 +59,7 @@ nav ul {
   font-size: 1.1em;
   border-left: 1px solid black;
   border-top: 1px solid black;
-
+  border-bottom: 1px solid black;
 }
 #cu {
   border-right: 1px solid black;
@@ -134,10 +128,10 @@ h2 {
   position: absolute;
   display: block;
   float: left;
-  width: 30px;
-  height: 30px;
-  top: 40px;
-  left: 10px;
+  width: 150px;
+  height: 150px;
+  top: 60px;
+  left: 10%;
   border: 1px solid black;
 }
 
@@ -145,10 +139,10 @@ h2 {
   position: absolute;
   display: block;
   float: left;
-  width: 25px;
-  height: 25px;
-  top: 40px;
-  right: 35%;
+  width: 150px;
+  height: 150px;
+  top: 60px;
+  right: 40%;
   border: 1px solid black;
 }
 
@@ -156,10 +150,10 @@ h2 {
   position: absolute;
   display: block;
   float: left;
-  width: 25px;
-  height: auto;
-  top: 40px;
-  right: 66%;
+  width: 150px;
+  height: 150px;
+  top: 60px;
+  right: 10%;
   border: 1px solid black;
 }
 
